tests/snapshots/runtime_error_fixtures/indirect_call_wrong_arity.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
assertion_line: 136
---
Fixture: examples/runtime_errors/indirect_call_wrong_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
[11 of 11] Compiling  indirect_call_wrong_arity
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/indirect_call_wrong_arity.flx
error[E1000]: wrong number of arguments: want=2, got=1

  examples/runtime_errors/indirect_call_wrong_arity.flx:7:19
  |
7 |     let ignored = f(1)
  |                   ^^^^

Stack trace:
  at main (examples/runtime_errors/indirect_call_wrong_arity.flx:7:19)
  at <main>
